// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordTextInput should be empty 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#b3b3b3",
        "borderRadius": 2,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "margin": 16,
        "paddingLeft": 10,
      },
      null,
    ]
  }
>
  <TextInput
    autoCorrect={false}
    ellipsizeMode="end"
    keyboardType="default"
    numberOfLines={1}
    onChangeText={[Function]}
    placeholder="PASSWORD"
    returnKeyType="go"
    secureTextEntry={true}
    style={
      Object {
        "flex": 8,
      }
    }
    value=""
  />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 2,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={null}
    >
      SHOW
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`PasswordTextInput should hide password when clicked again 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#b3b3b3",
        "borderRadius": 2,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "margin": 16,
        "paddingLeft": 10,
      },
      null,
    ]
  }
>
  <TextInput
    autoCorrect={false}
    ellipsizeMode="end"
    keyboardType="default"
    numberOfLines={1}
    onChangeText={[Function]}
    placeholder="PASSWORD"
    returnKeyType="go"
    secureTextEntry={true}
    style={
      Object {
        "flex": 8,
      }
    }
    value="PASSWORD123"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 2,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={null}
    >
      SHOW
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`PasswordTextInput should show password when clicked 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#b3b3b3",
        "borderRadius": 2,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "margin": 16,
        "paddingLeft": 10,
      },
      Object {
        "backgroundColor": "#fff3f3",
        "borderColor": "#cc7d7d",
      },
    ]
  }
>
  <TextInput
    autoCorrect={false}
    ellipsizeMode="end"
    keyboardType="default"
    numberOfLines={1}
    onChangeText={[Function]}
    placeholder="PASSWORD"
    returnKeyType="go"
    secureTextEntry={false}
    style={
      Object {
        "flex": 8,
      }
    }
    value="PASSWORD123"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 2,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#a41818",
        }
      }
    >
      HIDE
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`PasswordTextInput should store password 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#b3b3b3",
        "borderRadius": 2,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "margin": 16,
        "paddingLeft": 10,
      },
      null,
    ]
  }
>
  <TextInput
    autoCorrect={false}
    ellipsizeMode="end"
    keyboardType="default"
    numberOfLines={1}
    onChangeText={[Function]}
    placeholder="PASSWORD"
    returnKeyType="go"
    secureTextEntry={true}
    style={
      Object {
        "flex": 8,
      }
    }
    value="PASSWORD123"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 2,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={null}
    >
      SHOW
    </Text>
  </TouchableOpacity>
</View>
`;
